Fix vertical alignment, fix first letter capitalization

--- a/frontend/components/StatusIndicator/_styles.scss
+++ b/frontend/components/StatusIndicator/_styles.scss
@@ -3,6 +3,10 @@
   align-items: center;
   color: $core-fleet-blue;
 
+  ::first-letter {
+    text-transform: capitalize;
+  }
+
   &:before {
     border-radius: 100%;
     content: " ";
